# sobogus_undefined_behavior

./: CMakeLists.txt  readme.md
undefined_trigger/: CMakeLists.txt  Cadoux.hpp  FrictionProblem.cpp  FrictionProblem.hpp  FrictionProblem.impl.hpp  SobogusInterface.cpp  SobogusInterface.h  undefined_trigger.cpp
